data/derived/fa15/progs/unify/prog1869.ml.out
Characters 36-43:
  if is10gte then 1 + additivePersistence (sumList(digitsOfInt(n)))
     ^^^^^^^
Error: This expression has type int -> bool
       but an expression was expected of type bool
